--- a/mod2_solution/module2-solution/css/style.css
+++ b/mod2_solution/module2-solution/css/style.css
@@ -1,92 +1,125 @@
-/* Basic Style */
-* {
-    box-sizing: border-box;
-}
+/*basic style*/
+    * {
+        box-sizing: border-box;
+    }
 
-body {
-    background-color: white;
-    font-family: Helvetica, Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
+    body {
+        background-color: white;
+    }
 
-h1 {
-    margin-bottom: 15px;
+    h1 {
+       margin-bottom: 15px;
     text-align: center;
-    color: black; /* Changed to black */
+    color: #ff4532;
     font-size: 50px;
-}
-
-.row {
-    width: 90%;
-    margin: 0 auto; /* Center align the row */
-}
-
-.menu-item {
-    position: relative;
-    background-color: gray;
-    border: 3.5px solid black;
-    margin-bottom: 20px; /* Space between menu items */
-    padding: 15px;
-    overflow: hidden; /* Clear the float */
-}
-
-.menu-title {
-    float: right;
-    width: 100px;
-    padding: 5px;
-    margin: 0;
-    border: 3.5px solid black;
-    text-align: center;
-    font-size: 125%;
-    font-weight: bold;
-    background-color: #FFB6C1; /* Default background for titles */
-}
-
-/* Specific title colors */
-.menu-title.chicken {
-    background-color: #FFB6C1; /* Light pink */
-}
-
-.menu-title.beef {
-    background-color: #FF0000; /* Red */
-    color: white; /* Text color */
-}
-
-.menu-title.sushi {
-    background-color: #DFD479; /* Light yellow */
-}
-
-.content {
-    padding: 5px;
-    color: black; /* Text color */
-    height: 150px;
-    overflow: auto;
-}
-
-/* Desktop version */
-@media (min-width: 992px) {
-    .column-lg-4 {
-        float: left;
-        width: 33.33%;
-    }
-}
-
-/* Tablet version */
-@media (min-width: 768px) and (max-width: 991px) {
-    .column-md-6 {
-        float: left;
-        width: 50%;
     }
 
-    .column-md-12 {
+    section {
+        position: relative;
+        padding: 15px;
+        width: 90%;
+    }
+
+    p {
+        position: relative;
+        clear: right;
+    }
+
+    div {
+        position: relative;
+        background-color: gray;
+        border: 3.5px solid black;
         width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: auto;
     }
-}
 
-/* Mobile version */
-@media (max-width: 767px) {
-    .column-sm-12 {
-        width: 100%;
+    .sub1 {
+        float: right;
+        width: 100px;
+        padding: 5px;
+        margin: -3px -3px 0px;
+        border: 3.5px solid black;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+        background-color: #FFB6C1;
+
     }
-}
+
+    .sub2 {
+        float: right;
+        color: white;
+        width: 100px;
+        padding: 5px;
+        margin: -3px -3px 0px;
+        border: 3.5px solid black;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+        background-color: #FF0000;
+
+    }
+
+    .sub3 {
+        color: black;
+        float: right;
+        width: 100px;
+        padding: 5px;
+         margin: -3px -3px 0px;
+        border: 3.5px solid black;
+        text-align: center;
+        font-size: 125%;
+        font-weight: bold;
+        background-color: rgb(223, 212, 121);
+
+    }
+
+    .content {
+        padding: 5px;
+        border: none;
+        background-color: gray;
+        font-family: Helvetica;
+        color: black;
+        margin: 3px ;
+        height: 150px;
+        overflow: auto;
+    }
+
+    .row {
+        width: 90%;
+    }
+
+    /*desktop version*/
+    @media (min-width: 992px) {
+        .column-lg-4 {
+            float: left;
+            width: 33.33%;
+        }
+    }
+
+    /*tablet version*/
+    @media (min-width: 768px) and (max-width: 991px) {
+        .colmn-md-6 {
+            float: left;
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .colmn-md-12 {
+            float: left;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    /*mobile version*/
+    @media (max-width: 767px) {
+        .colmn-sm-12 {
+            float: left;
+            width: 100%;
+        }
+    }
